# demorequirement

./: app.py  attack.py  attack_core.py  change_phase.py  denoise.py  requirements.txt  web_app.py
python-stretch/: .gitignore  CMakeLists.txt  README.md  pyproject.toml
python-stretch/examples/: example_timeit.py
python-stretch/include/stretch/: signalsmith-stretch.h
python-stretch/src/: signalsmith-bindings.cpp
python-stretch/tests/: test_pitch_shift.py  test_time_stretch.py
timbre_watermarking/: requirements.txt
timbre_watermarking/config_wm/: model.yaml
timbre_watermarking/distortions/: dl.py
timbre_watermarking/model/: conv2_mel_modules.py
timbre_watermarking/utils/: tools.py
wavmark_main/: diff_recover.ipynb  generate_vibrato.ipynb  generate_wavmark.ipynb  squarewav.py  test_wavmark_square.ipynb  test_wavmark_vibrato.ipynb  vibrato.py
wavmark_main/src/wavmark/: __init__.py
